<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/commo_padding_min"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.petregister.views.PetRegisterFragment">
    <ImageView
        android:id="@+id/iv_regresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/commo_padding_min"
        android:layout_marginTop="@dimen/commo_padding_min"
        android:src="@drawable/ic_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:text="@string/title_Pet_Register"
        android:textSize="@dimen/text_Size_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/commo_padding_min"
        android:layout_marginStart="@dimen/commo_padding_default"
        android:background="@drawable/ic_shape_gradient_borde"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_regresar"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_30dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_Name"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation_2dp"
            android:hint="@string/hint_name"
            android:maxLines="@integer/description_line_min"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvtitle" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_type"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation_2dp"
            android:hint="@string/hint_type"
            android:maxLines="@integer/description_line_min"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_1" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_raza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_type">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_raza"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation_2dp"
            android:hint="@string/hint_raza"
            android:maxLines="@integer/description_line_min"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_2" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_obs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_raza">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_obs"
            android:layout_width="@dimen/edit_text_width"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation_2dp"
            android:hint="@string/hint_obs"
            android:maxLines="@integer/description_line_min"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_3" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cont_cam"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/spacing_30dp"
        android:layout_marginTop="@dimen/commo_padding_middle"
        app:layout_constraintTop_toBottomOf="@+id/ti_obs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_shape_gradient_borde"
        >
        <TextView
            android:id="@+id/tv_add_Pet"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:text="@string/title_add_pet"
            android:layout_marginTop="@dimen/spacing_2dp"
            android:textSize="@dimen/text_Size"
            android:layout_marginStart="@dimen/commo_padding_min"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <ImageButton
            android:id="@+id/iv_add_imgPet"
            android:layout_width="@dimen/spacing_34dp"
            android:layout_height="@dimen/spacing_30dp"
            android:layout_marginStart="@dimen/commo_padding_min"
            android:layout_marginEnd="@dimen/commo_padding_min"
            android:src="@drawable/ic_camara_icon"
            app:layout_constraintStart_toEndOf="@+id/tv_add_Pet"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/add_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_pet_height"
        android:src="@drawable/ic_pets_icon"
        android:layout_marginStart="@dimen/commo_padding_middle"
        android:layout_marginEnd="@dimen/commo_padding_middle"
        android:layout_marginTop="@dimen/commo_padding_min"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cont_cam"
        />
    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_marginTop="@dimen/commo_padding_middle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/ic_shape_gradient_borde"
        app:layout_constraintTop_toBottomOf="@+id/add_image"
        />

</androidx.constraintlayout.widget.ConstraintLayout>